[package]
name = "sonde"
version = "0.6.1"
authors = ["Ryan <rnleach@users.noreply.github.com>"]
edition = "2024"
publish = false

[dependencies]
bufr-read = { git = "https://github.com/rnleach/bufr-read.git", tag = "v0.2.6" }
chrono = "^0.4.23"
crossbeam-channel = "^0.5"
dirs = "^6.0.0"
itertools = "^0.14"
lazy_static = "^1"
log = { version = "^0.4.2", features = ["std", "max_level_trace", "release_max_level_info"] }
metfor = { version = "^0.10.0", features = ["use_optional", "use_serde"] }
optional = "^0.5.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_yaml = "0.9.4"
sounding-analysis = "^0.19.0"
sounding-bufkit = "^0.18.0"
sounding-wyoming-text-list = "^0.5.0"
threadpool = "1.7.1"

cairo = { version= "^0.21", features=["png"], package = "cairo-rs" }
gtk = { version = "^0.10", features = ["v4_6"], package = "gtk4" }

[dev-dependencies]
criterion = { version = "0.7", features = ['html_reports'] }

[[bench]]
name = "analysis"
harness = false

[profile.release]
lto = true
panic = 'abort'
